--- a/OnlyPan/Views/Recipes/View.cshtml
+++ b/OnlyPan/Views/Recipes/View.cshtml
@@ -30,7 +30,7 @@
         <h4 class="uppercase">Haz una donacion de lo que coinsideres correcto</h4>
         <form method="post" asp-action="MakeDonation" asp-controller="Recipes">
             <input type="hidden" name="recipeId" value="@Model.IdRecipe"/>
-            <label for="amount">Cantidad</label>
+            <label for="amount">Cantidad:</label>
             <input type="number" name="amount" min="0" step="0.01"/>
             <input type="submit" value="Donar"/>
         </form>
